--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+awesome-slugify==1.6.5
 certifi==2018.8.24
 Django==2.1.2
+django-password-reset==2.0
+Pillow==5.3.0
 pytz==2018.5
+regex==2018.8.29
+Unidecode==0.4.21
