--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 awesome-slugify==1.6.5
-certifi==2018.8.24
+certifi==2018.10.15
 Django==2.1.2
 django-password-reset==2.0
 Pillow==5.3.0
 pytz==2018.5
+redis==2.10.6
 regex==2018.8.29
 Unidecode==0.4.21
