--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 awesome-slugify==1.6.5
 certifi==2018.10.15
 Django==2.1.2
+django-braces==1.13.0
+django-environ==0.4.5
 django-password-reset==2.0
 Markdown==3.0.1
 Pillow==5.3.0
