--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,32 @@
 awesome-slugify==1.6.5
+backcall==0.1.0
 certifi==2018.10.15
+decorator==4.3.0
 Django==2.1.2
 django-braces==1.13.0
 django-environ==0.4.5
 django-password-reset==2.0
+djangorestframework==3.9.0
+ipython==7.2.0
+ipython-genutils==0.2.0
+jedi==0.13.1
+line-profiler==2.1.2
 Markdown==3.0.1
+numpy==1.15.4
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==5.3.0
+prompt-toolkit==2.0.7
+ptyprocess==0.6.0
+Pygments==2.3.0
 pytz==2018.5
 redis==2.10.6
 regex==2018.8.29
+sentry-sdk==0.7.2
+six==1.12.0
 sorl-thumbnail==12.5.0
+traitlets==4.3.2
 Unidecode==0.4.21
+urllib3==1.24.1
+wcwidth==0.1.7
