--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+amqp==2.4.2
+anyjson==0.3.3
 awesome-slugify==1.6.5
 backcall==0.1.0
+billiard==3.5.0.5
+celery==4.2.1
 certifi==2018.10.15
+chardet==3.0.4
 decorator==4.3.0
 Django==2.1.2
 django-braces==1.13.0
 django-environ==0.4.5
 django-password-reset==2.0
 djangorestframework==3.9.0
+idna==2.8
 ipython==7.2.0
 ipython-genutils==0.2.0
 jedi==0.13.1
+kombu==4.4.0
 line-profiler==2.1.2
+lxml==4.3.2
 Markdown==3.0.1
 numpy==1.15.4
 parso==0.3.1
@@ -23,10 +31,12 @@ Pygments==2.3.0
 pytz==2018.5
 redis==2.10.6
 regex==2018.8.29
+requests==2.21.0
 sentry-sdk==0.7.2
 six==1.12.0
 sorl-thumbnail==12.5.0
 traitlets==4.3.2
 Unidecode==0.4.21
 urllib3==1.24.1
+vine==1.2.0
 wcwidth==0.1.7
