--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ static/images/
 !static/images/back_logo.png
 !static/images/logo.png
 !static/images/home.jpg
+!static/images/anomynous.jpg
 
 media/
 logs/
