--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Pillow==5.3.0
 prompt-toolkit==2.0.7
 ptyprocess==0.6.0
 Pygments==2.3.0
+python-dotenv==0.10.3
 pytz==2018.5
 redis==2.10.6
 regex==2018.8.29
